--- a/docs/source/notebooks/Datasets.ipynb
+++ b/docs/source/notebooks/Datasets.ipynb
@@ -45,7 +45,56 @@
    "id": "e50f3142",
    "metadata": {},
    "source": [
-    "## Public datasets"
+    "## Individual datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fd1a4bc",
+   "metadata": {},
+   "source": [
+    "### CRC ST\n",
+    "- 2023_Kerstin_Hahn_CRC_CMS_ST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "403296a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "325c8af7",
+   "metadata": {},
+   "source": [
+    "## Big projects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af92b1e3",
+   "metadata": {},
+   "source": [
+    "### TCGA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68781dc0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95b5fb51",
+   "metadata": {},
+   "source": [
+    "### DepMap"
    ]
   },
   {
