--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -99,6 +99,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7469abd1",
+   "metadata": {},
+   "source": [
+    "## Drug screening\n",
+    "- https://virtual-flow.org/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "915bd046",
