--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -10,97 +10,243 @@
   },
   {
    "cell_type": "markdown",
+   "id": "559857ef",
+   "metadata": {},
+   "source": [
+    "## Excellent tools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15062ad7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# format transform among seurat, scanpy, loom\n",
+    "library(sceasy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ab2e085",
+   "metadata": {},
+   "source": [
+    "- http://localhost:17435/notebooks/projects/ApcKO_multiomics/4.exclude_WT2.ipynb\n",
+    "- http://localhost:17435/notebooks/projects/ApcKO_multiomics/Seurat2Scanpy.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02f068f9",
+   "metadata": {},
+   "source": [
+    "## Tool to try\n",
+    "- Metacell\n",
+    "- Seacell\n",
+    "- SCINEC+"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a5542f0",
+   "metadata": {},
+   "source": [
+    "## sc RNA-seq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56306de7",
+   "metadata": {},
+   "source": [
+    "### Annotation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca0df0da",
+   "metadata": {},
+   "source": [
+    "### RNA velocity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbc85a69",
+   "metadata": {},
+   "source": [
+    "### CNV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a57eeb50",
+   "metadata": {},
+   "source": [
+    "### CCI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b3b4ecb",
+   "metadata": {},
+   "source": [
+    "## sc multi-omics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83673e6d",
+   "metadata": {},
+   "source": [
+    "### scATAC-seq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fb3f08a",
+   "metadata": {},
+   "source": [
+    "#### macs call peak\n",
+    "- https://github.com/stuart-lab/signac/issues/1091"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca0e3e5c",
+   "metadata": {},
+   "source": [
+    "#### Footprint\n",
+    "- http://localhost:17435/notebooks/projects/ApcKO_multiomics/4.exclude_WT2.ipynb\n",
+    "- https://stuartlab.org/signac/articles/footprint.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d46bff4",
+   "metadata": {},
+   "source": [
+    "#### update atac_fragments.tsv.gz\n",
+    "- http://localhost:17435/notebooks/projects/ApcKO_multiomics/4.exclude_WT2.ipynb\n",
+    "- Subset does not take Motif positions with it\n",
+    "- https://github.com/stuart-lab/signac/issues/364"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91767c7b",
+   "metadata": {},
+   "source": [
+    "### MIRA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "446e215f",
+   "metadata": {},
+   "source": [
+    "### GRN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6756ec02",
+   "metadata": {},
+   "source": [
+    "#### eGRN\n",
+    "- STREAM-eGRN.pdf\n",
+    "- https://www.biorxiv.org/content/biorxiv/early/2022/12/15/2022.12.15.520582.full.pdf?%3Fcollection=\n",
+    "- https://github.com/YangLi-Bio/stream_core"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e94a0077",
+   "metadata": {},
+   "source": [
+    "### Perturb-seq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61dfedb9",
+   "metadata": {},
+   "source": [
+    "### CRISPR screening"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1439ffb4",
+   "metadata": {},
+   "source": [
+    "## Spatial transcriptomics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db1da25b",
+   "metadata": {},
+   "source": [
+    "## NGS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4454cdd0",
+   "metadata": {},
+   "source": [
+    "### Cut&Run"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c850481c",
+   "metadata": {},
+   "source": [
+    "### Cistrome\n",
+    "- http://cistrome.org/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88fb14f0",
+   "metadata": {},
+   "source": [
+    "#### LISA\n",
+    "- http://lisa.cistrome.org/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2030263",
+   "metadata": {},
+   "source": [
+    "### ConSurf\n",
+    "- https://consurf.tau.ac.il/consurf_index.php"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bae2a235",
+   "metadata": {},
+   "source": [
+    "### Phastcons Conservation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6e5e679b",
    "metadata": {},
    "source": [
-    "## sc RNA-seq\n",
-    "\n",
-    "### Annotation\n",
-    "\n",
-    "\n",
-    "\n",
-    "### RNA velocity\n",
-    "\n",
-    "\n",
-    "\n",
-    "### CNV\n",
-    "\n",
-    "\n",
-    "\n",
-    "### CCI\n",
-    "\n",
-    "\n",
-    "\n",
-    "## sc multi-omics\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "### scATAC-seq\n",
-    "\n",
-    "#### macs call peak\n",
-    "- https://github.com/stuart-lab/signac/issues/1091\n",
-    "\n",
-    "#### Footprint\n",
-    "- http://localhost:17435/notebooks/projects/ApcKO_multiomics/4.exclude_WT2.ipynb\n",
-    "- https://stuartlab.org/signac/articles/footprint.html\n",
-    "\n",
-    "#### update atac_fragments.tsv.gz\n",
-    "- http://localhost:17435/notebooks/projects/ApcKO_multiomics/4.exclude_WT2.ipynb\n",
-    "\n",
-    "\n",
-    "\n",
-    "### MIRA\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "### GRN\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "### Perturb-seq\n",
-    "\n",
-    "\n",
-    "\n",
-    "### CRISPR screening\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Spatial transcriptomics\n",
-    "\n",
-    "\n",
-    "\n",
-    "## NGS\n",
-    "\n",
-    "### Cut&Run\n",
-    "\n",
-    "\n",
-    "\n",
-    "### Cistrome\n",
-    "- http://cistrome.org/\n",
-    "\n",
-    "#### LISA\n",
-    "- http://lisa.cistrome.org/\n",
-    "\n",
-    "### ConSurf\n",
-    "- https://consurf.tau.ac.il/consurf_index.php\n",
-    "\n",
-    "### Phastcons Conservation\n",
-    "\n",
-    "\n",
-    "\n",
     "### MEME\n",
     "- https://meme-suite.org/meme/db/motifs"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7469abd1",
+   "id": "d071f7de",
    "metadata": {},
    "source": [
     "## Drug screening\n",
