--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "559857ef",
+   "id": "e2f3bd4f",
    "metadata": {},
    "source": [
     "## Excellent tools"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15062ad7",
+   "id": "592e81c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ab2e085",
+   "id": "4e6bf84c",
    "metadata": {},
    "source": [
     "- http://localhost:17435/notebooks/projects/ApcKO_multiomics/4.exclude_WT2.ipynb\n",
@@ -38,13 +38,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02f068f9",
+   "id": "923850d8",
    "metadata": {},
    "source": [
     "## Tool to try\n",
     "- Metacell\n",
-    "- Seacell\n",
-    "- SCINEC+"
+    "- SEACells\n",
+    "- SCENIC+"
    ]
   },
   {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6756ec02",
+   "id": "d4ec748c",
    "metadata": {},
    "source": [
     "#### eGRN\n",
