--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0daa0d9c",
+   "id": "e62a15d3",
    "metadata": {},
    "source": [
     "## Excellent tools"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bd54538",
+   "id": "8f728874",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc4d0dc2",
+   "id": "5a3dca30",
    "metadata": {},
    "source": [
     "- http://localhost:17435/notebooks/projects/ApcKO_multiomics/4.exclude_WT2.ipynb\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6b49dd0",
+   "id": "e5384e3a",
    "metadata": {},
    "source": [
     "## Tool to try\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d913880b",
+   "id": "ac466688",
    "metadata": {},
    "source": [
     "#### eGRN\n",
@@ -257,6 +257,46 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "915bd046",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "317da10e",
+   "metadata": {},
+   "source": [
+    "## Websites"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24fb775d",
+   "metadata": {},
+   "source": [
+    "### Read the Docs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a4ab7b9",
+   "metadata": {},
+   "source": [
+    "### pkgdown"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbfdb314",
+   "metadata": {},
+   "source": [
+    "### genexcell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "626e1392",
    "metadata": {},
    "outputs": [],
    "source": []
