--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e62a15d3",
+   "id": "32b31031",
    "metadata": {},
    "source": [
     "## Excellent tools"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f728874",
+   "id": "0343345c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a3dca30",
+   "id": "c7707529",
    "metadata": {},
    "source": [
     "- http://localhost:17435/notebooks/projects/ApcKO_multiomics/4.exclude_WT2.ipynb\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5384e3a",
+   "id": "b8c3c5ec",
    "metadata": {},
    "source": [
     "## Tool to try\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac466688",
+   "id": "87612e7a",
    "metadata": {},
    "source": [
     "#### eGRN\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "317da10e",
+   "id": "59ed25a6",
    "metadata": {},
    "source": [
     "## Websites"
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24fb775d",
+   "id": "e9f66fee",
    "metadata": {},
    "source": [
     "### Read the Docs"
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a4ab7b9",
+   "id": "897d5ccb",
    "metadata": {},
    "source": [
     "### pkgdown"
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbfdb314",
+   "id": "3de97257",
    "metadata": {},
    "source": [
     "### genexcell"
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "626e1392",
+   "id": "824712ad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -304,9 +304,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R 4.1",
+   "display_name": "R",
    "language": "R",
-   "name": "ir41"
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": "r",
