--- a/docs/source/notebooks/Datasets.ipynb
+++ b/docs/source/notebooks/Datasets.ipynb
@@ -58,6 +58,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fd324e4f",
+   "metadata": {},
+   "source": [
+    "- [2023_Kerstin_Hahn_CRC_CMS_ST](datasets/2023_Kerstin_Hahn_CRC_CMS_ST.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "403296a6",
