--- a/docs/source/notebooks/Datasets.ipynb
+++ b/docs/source/notebooks/Datasets.ipynb
@@ -59,8 +59,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd324e4f",
-   "metadata": {},
+   "id": "6068131e",
+   "metadata": {
+    "tags": [
+     "nbsphinx-gallery"
+    ]
+   },
    "source": [
     "- [2023_Kerstin_Hahn_CRC_CMS_ST](datasets/2023_Kerstin_Hahn_CRC_CMS_ST.ipynb)"
    ]
@@ -140,6 +144,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "R 4.1",
    "language": "R",
