--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -274,7 +274,10 @@
    "id": "e9f66fee",
    "metadata": {},
    "source": [
-    "### Read the Docs"
+    "### Read the Docs\n",
+    "- add tag: \n",
+    "- nbsphinx-link-gallery [for gallery]\n",
+    "- nbsphinx-thumbnail [for thumbnail]"
    ]
   },
   {
