--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -277,7 +277,10 @@
     "### Read the Docs\n",
     "- add tag: \n",
     "- nbsphinx-link-gallery [for gallery]\n",
-    "- nbsphinx-thumbnail [for thumbnail]"
+    "- nbsphinx-thumbnail [for thumbnail]\n",
+    "- https://docs.readthedocs.io/en/stable/guides/jupyter.html#creating-galleries-of-examples-using-notebooks\n",
+    "- https://nbsphinx.readthedocs.io/en/latest/gallery/gallery-with-nested-documents.html\n",
+    "- https://insipid-sphinx-theme.readthedocs.io/en/0.4.1/ []"
    ]
   },
   {
