--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -280,7 +280,7 @@
     "- nbsphinx-thumbnail [for thumbnail]\n",
     "- https://docs.readthedocs.io/en/stable/guides/jupyter.html#creating-galleries-of-examples-using-notebooks\n",
     "- https://nbsphinx.readthedocs.io/en/latest/gallery/gallery-with-nested-documents.html\n",
-    "- https://insipid-sphinx-theme.readthedocs.io/en/0.4.1/ []"
+    "- https://sphinx-gallery.github.io/stable/index.html [could solve the problem]"
    ]
   },
   {
