--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -280,7 +280,30 @@
     "- nbsphinx-thumbnail [for thumbnail]\n",
     "- https://docs.readthedocs.io/en/stable/guides/jupyter.html#creating-galleries-of-examples-using-notebooks\n",
     "- https://nbsphinx.readthedocs.io/en/latest/gallery/gallery-with-nested-documents.html\n",
-    "- https://sphinx-gallery.github.io/stable/index.html [could solve the problem]"
+    "- https://sphinx-gallery.github.io/stable/index.html [could solve the problem]\n",
+    "\n",
+    "```\n",
+    "# requirements.txt\n",
+    "\n",
+    "# conf.py\n",
+    "extensions = [\n",
+    "    #\"myst_nb\", # pip install myst_nb\n",
+    "    \"nbsphinx\", # pip install nbsphinx\n",
+    "    \"myst_parser\", # pip install myst-parser\n",
+    "    \"sphinx_gallery.load_style\",\n",
+    "    'sphinx.ext.autodoc',\n",
+    "    'sphinx.ext.autosummary',\n",
+    "    'sphinx_copybutton',\n",
+    "    'sphinx_panels',\n",
+    "    'sphinx.ext.viewcode',\n",
+    "    # theme\n",
+    "    'sphinx_rtd_size',\n",
+    "    'ipykernel', # for kernels\n",
+    "]\n",
+    "\n",
+    "nbsphinx_kernel_name = 'python'\n",
+    "nbsphinx_execute = 'never' # don't check R code\n",
+    "```"
    ]
   },
   {
