--- a/docs/source/notebooks/Datasets.ipynb
+++ b/docs/source/notebooks/Datasets.ipynb
@@ -62,7 +62,7 @@
    "id": "fd690038",
    "metadata": {
     "tags": [
-     "nbsphinx-link-gallery"
+     "nbsphinx-gallery"
     ]
    },
    "source": [
