--- a/docs/source/notebooks/Datasets.ipynb
+++ b/docs/source/notebooks/Datasets.ipynb
@@ -60,7 +60,11 @@
   {
    "cell_type": "markdown",
    "id": "fd690038",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbsphinx-link-gallery"
+    ]
+   },
    "source": [
     "* [2023_Kerstin_Hahn_CRC_CMS_ST](datasets/2023_Kerstin_Hahn_CRC_CMS_ST.ipynb)\n",
     "* [test](datasets/2023_Kerstin_Hahn_CRC_CMS_ST.ipynb)"
