--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -276,6 +276,7 @@
    "source": [
     "### Read the Docs\n",
     "- add tag: \n",
+    "- nbsphinx-gallery [include section toc on the left]\n",
     "- nbsphinx-link-gallery [for gallery]\n",
     "- nbsphinx-thumbnail [for thumbnail]\n",
     "- https://docs.readthedocs.io/en/stable/guides/jupyter.html#creating-galleries-of-examples-using-notebooks\n",
