--- a/docs/source/notebooks/Databases.ipynb
+++ b/docs/source/notebooks/Databases.ipynb
@@ -10,10 +10,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "789c9521",
+   "metadata": {},
+   "source": [
+    "## Big DBs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b4e42b7d",
    "metadata": {},
    "source": [
-    "## DepMap"
+    "### DepMap"
    ]
   },
   {
@@ -29,7 +37,7 @@
    "id": "b3742391",
    "metadata": {},
    "source": [
-    "## TCGA"
+    "### TCGA"
    ]
   },
   {
@@ -45,13 +53,39 @@
    "id": "0f30fffc",
    "metadata": {},
    "source": [
-    "## CRC"
+    "### CRC"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "fba9c9f6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1dc1ee0",
+   "metadata": {},
+   "source": [
+    "## Small DBs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1195c7bf",
+   "metadata": {},
+   "source": [
+    "### IMMUcan\n",
+    "- [Meta-Analysis of Human Cancer Single-Cell RNA-Seq Datasets Using the IMMUcan Database](https://doi.org/10.1158/0008-5472.CAN-22-0074)\n",
+    "- https://immucanscdb.vital-it.ch/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75cec02a",
    "metadata": {},
    "outputs": [],
    "source": []
