--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -194,6 +194,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "16fe0dfb",
+   "metadata": {},
+   "source": [
+    "### epitranscriptomics\n",
+    "- [m6A-RNA-regulators.ipynb](toolbox/m6A-RNA/m6A-RNA-regulators.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4454cdd0",
    "metadata": {},
    "source": [
