--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -10,38 +10,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32b31031",
+   "id": "c19814b0",
    "metadata": {},
    "source": [
-    "## Excellent tools"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0343345c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# format transform among seurat, scanpy, loom\n",
-    "library(sceasy)"
+    "## Best categorization methods\n",
+    "- Based on data type (DNA, RNA, ATAC, ST, protein)\n",
+    "- Based on purpose (differentiation, plasticity)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c7707529",
+   "id": "486495ea",
    "metadata": {},
    "source": [
-    "- http://localhost:17435/notebooks/projects/ApcKO_multiomics/4.exclude_WT2.ipynb\n",
-    "- http://localhost:17435/notebooks/projects/ApcKO_multiomics/Seurat2Scanpy.ipynb"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b8c3c5ec",
-   "metadata": {},
-   "source": [
-    "## Tool to try\n",
+    "## Tool need to try\n",
     "- Metacell\n",
     "- SEACells\n",
     "- SCENIC+"
@@ -49,55 +31,43 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a5542f0",
+   "id": "5304dc1c",
    "metadata": {},
    "source": [
-    "## sc RNA-seq"
+    "## DNA\n",
+    "- SNV\n",
+    "- CNV\n",
+    "- SV\n",
+    "- cancer mutations"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "56306de7",
+   "id": "9329d30e",
    "metadata": {},
    "source": [
-    "### Annotation"
+    "### Phastcons Conservation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f1114cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "650ebd22",
+   "metadata": {},
+   "source": [
+    "## Epigenetic"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ca0df0da",
-   "metadata": {},
-   "source": [
-    "### RNA velocity"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bbc85a69",
-   "metadata": {},
-   "source": [
-    "### CNV"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a57eeb50",
-   "metadata": {},
-   "source": [
-    "### CCI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5b3b4ecb",
-   "metadata": {},
-   "source": [
-    "## sc multi-omics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "83673e6d",
+   "id": "c1ef4ee4",
    "metadata": {},
    "source": [
     "### scATAC-seq"
@@ -105,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fb3f08a",
+   "id": "0d131a49",
    "metadata": {},
    "source": [
     "#### macs call peak\n",
@@ -114,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca0e3e5c",
+   "id": "78ed980b",
    "metadata": {},
    "source": [
     "#### Footprint\n",
@@ -124,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d46bff4",
+   "id": "99451d4f",
    "metadata": {},
    "source": [
     "#### update atac_fragments.tsv.gz\n",
@@ -134,11 +104,141 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e22868e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "91767c7b",
+   "id": "8a897c6d",
    "metadata": {},
    "source": [
-    "### MIRA"
+    "### Cut&Run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45acba33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5898c09",
+   "metadata": {},
+   "source": [
+    "### epitranscriptomics\n",
+    "- [m6A-RNA-regulators.ipynb](toolbox/m6A-RNA/m6A-RNA-regulators.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69f6a2f8",
+   "metadata": {},
+   "source": [
+    "## RNA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df460b8a",
+   "metadata": {},
+   "source": [
+    "### bulk RNA-seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "492a161f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a5542f0",
+   "metadata": {},
+   "source": [
+    "### scRNA-seq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56306de7",
+   "metadata": {},
+   "source": [
+    "#### Annotation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca0df0da",
+   "metadata": {},
+   "source": [
+    "#### RNA velocity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbc85a69",
+   "metadata": {},
+   "source": [
+    "#### CNV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a57eeb50",
+   "metadata": {},
+   "source": [
+    "#### CCI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c532ffc9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3a7ffa4",
+   "metadata": {},
+   "source": [
+    "## Protein"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "348315ab",
+   "metadata": {},
+   "source": [
+    "### ConSurf\n",
+    "- https://consurf.tau.ac.il/consurf_index.php"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c05628c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b3b4ecb",
+   "metadata": {},
+   "source": [
+    "## multi-omics"
    ]
   },
   {
@@ -158,6 +258,22 @@
     "- STREAM-eGRN.pdf\n",
     "- https://www.biorxiv.org/content/biorxiv/early/2022/12/15/2022.12.15.520582.full.pdf?%3Fcollection=\n",
     "- https://github.com/YangLi-Bio/stream_core"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "904e8cf6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c5db4a9",
+   "metadata": {},
+   "source": [
+    "## New data types"
    ]
   },
   {
@@ -181,85 +297,60 @@
    "id": "1439ffb4",
    "metadata": {},
    "source": [
-    "## Spatial transcriptomics"
+    "### Spatial transcriptomics"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "db1da25b",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d89a6e74",
    "metadata": {},
-   "source": [
-    "## NGS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16fe0dfb",
-   "metadata": {},
-   "source": [
-    "### epitranscriptomics\n",
-    "- [m6A-RNA-regulators.ipynb](toolbox/m6A-RNA/m6A-RNA-regulators.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4454cdd0",
-   "metadata": {},
-   "source": [
-    "### Cut&Run"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c850481c",
-   "metadata": {},
-   "source": [
-    "### Cistrome\n",
-    "- http://cistrome.org/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "88fb14f0",
-   "metadata": {},
-   "source": [
-    "#### LISA\n",
-    "- http://lisa.cistrome.org/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a2030263",
-   "metadata": {},
-   "source": [
-    "### ConSurf\n",
-    "- https://consurf.tau.ac.il/consurf_index.php"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bae2a235",
-   "metadata": {},
-   "source": [
-    "### Phastcons Conservation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6e5e679b",
-   "metadata": {},
-   "source": [
-    "### MEME\n",
-    "- https://meme-suite.org/meme/db/motifs"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "d071f7de",
    "metadata": {},
    "source": [
-    "## Drug screening\n",
+    "### Drug screening\n",
     "- https://virtual-flow.org/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40443641",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42443555",
+   "metadata": {},
+   "source": [
+    "## Others"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b7f8069",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# format transform among seurat, scanpy, loom\n",
+    "library(sceasy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2079fb6",
+   "metadata": {},
+   "source": [
+    "- http://localhost:17435/notebooks/projects/ApcKO_multiomics/4.exclude_WT2.ipynb\n",
+    "- http://localhost:17435/notebooks/projects/ApcKO_multiomics/Seurat2Scanpy.ipynb"
    ]
   },
   {
@@ -340,6 +431,81 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62572c83",
+   "metadata": {},
+   "source": [
+    "## Theme-based"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "662ab185",
+   "metadata": {},
+   "source": [
+    "### lineage plasticity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4f8e195",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae210607",
+   "metadata": {},
+   "source": [
+    "### MIRA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66f97044",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "859b2d27",
+   "metadata": {},
+   "source": [
+    "### Cistrome\n",
+    "- http://cistrome.org/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "076906f4",
+   "metadata": {},
+   "source": [
+    "### LISA\n",
+    "- http://lisa.cistrome.org/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee1ca56c",
+   "metadata": {},
+   "source": [
+    "### MEME\n",
+    "- https://meme-suite.org/meme/db/motifs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cb4de92",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -361,7 +527,7 @@
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
-   "skip_h1_title": false,
+   "skip_h1_title": true,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
